[gd_scene load_steps=29 format=3 uid="uid://bd8r13w6qy4ya"]

[ext_resource type="Script" path="res://HUD.gd" id="1_op03q"]
[ext_resource type="Texture2D" uid="uid://biaufim8sfgy2" path="res://assets/parent/100%.png" id="2_d3gdg"]
[ext_resource type="Texture2D" uid="uid://bsedifg70kyp" path="res://assets/room/windowclose.png" id="3_joo45"]
[ext_resource type="Script" path="res://BabyController.gd" id="3_ope2v"]
[ext_resource type="Texture2D" uid="uid://d4dlad8wuuer6" path="res://assets/baby/baby_climb.png" id="3_p1f1h"]
[ext_resource type="Texture2D" uid="uid://chjpxrwfju8fd" path="res://assets/baby/baby_crawl.png" id="4_l7dhf"]
[ext_resource type="Texture2D" uid="uid://btr8ogcotj3i5" path="res://assets/baby/baby_cry.png" id="5_qv5xf"]
[ext_resource type="Texture2D" uid="uid://bo77l62a8xn7o" path="res://assets/baby/baby_sit.png" id="6_fg8gu"]
[ext_resource type="Texture2D" uid="uid://cm62k50eb7pw4" path="res://assets/baby/baby_sleep.png" id="7_bllr0"]
[ext_resource type="Script" path="res://PathFollow2D.gd" id="9_uyle3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ohad"]
bg_color = Color(0.843137, 0.843137, 0.843137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1ev7"]
bg_color = Color(0, 0.72549, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4xta"]
bg_color = Color(0.292061, 0.393343, 0.689076, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxrtk"]
bg_color = Color(0.213534, 0.299598, 0.558357, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06232"]
bg_color = Color(0.163893, 0.236075, 0.454236, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n536"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3602"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tyxo"]
bg_color = Color(0.292061, 0.393343, 0.689076, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74leh"]
bg_color = Color(0.213534, 0.299598, 0.558357, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtnpx"]
bg_color = Color(0.163893, 0.236075, 0.454236, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjqp1"]

[sub_resource type="Curve2D" id="Curve2D_2xjyt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 135, 240, 0, 0, 0, 0, 59, 214, 0, 0, 0, 0, 59, 133, 0, 0, 0, 0, 80, 121, 0, 0, 0, 0, 95, 87)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_u1001"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 135, 240, 0, 0, 0, 0, 134, 275, 0, 0, 0, 0, 165, 298, 0, 0, 0, 0, 211, 272, 0, 0, 0, 0, 220, 188)
}
point_count = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_voe6q"]
atlas = ExtResource("3_p1f1h")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gnqf"]
atlas = ExtResource("4_l7dhf")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ey3a"]
atlas = ExtResource("5_qv5xf")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cnhe"]
atlas = ExtResource("7_bllr0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_bw1xg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_voe6q")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gnqf")
}],
"loop": true,
"name": &"crawl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ey3a")
}],
"loop": true,
"name": &"cry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fg8gu")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cnhe")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[node name="Node" type="Node"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 270.0
offset_bottom = 480.0

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("1_op03q")

[node name="ShhTimer" type="Timer" parent="HUD"]
one_shot = true

[node name="SleepDelay" type="Timer" parent="HUD"]
one_shot = true

[node name="DeepSleepDelay" type="Timer" parent="HUD"]
wait_time = 5.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Bottom" type="HBoxContainer" parent="HUD/MarginContainer/Rows"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 10

[node name="Status" type="HBoxContainer" parent="HUD/MarginContainer/Rows/Bottom"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="HUD/MarginContainer/Rows/Bottom/Status"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_d3gdg")

[node name="StaminaBar" type="ProgressBar" parent="HUD/MarginContainer/Rows/Bottom/Status"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_6ohad")
theme_override_styles/fill = SubResource("StyleBoxFlat_w1ev7")
step = 0.1
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Actions" type="HBoxContainer" parent="HUD/MarginContainer/Rows/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SleepButton" type="Button" parent="HUD/MarginContainer/Rows/Bottom/Actions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_p4xta")
theme_override_styles/hover = SubResource("StyleBoxFlat_cxrtk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06232")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2n536")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s3602")
text = "Zzz"

[node name="ShhButton" type="Button" parent="HUD/MarginContainer/Rows/Bottom/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4tyxo")
theme_override_styles/hover = SubResource("StyleBoxFlat_74leh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qtnpx")
theme_override_styles/disabled = SubResource("StyleBoxFlat_2n536")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sjqp1")
text = "Shh
"

[node name="WindowDelay" type="Timer" parent="HUD"]

[node name="Window" type="Button" parent="HUD"]
offset_left = 66.0
offset_top = 1.0
offset_right = 125.0
offset_bottom = 85.0
icon = ExtResource("3_joo45")
expand_icon = true

[node name="BabyController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ope2v")

[node name="WindowPath" type="Path2D" parent="BabyController"]
curve = SubResource("Curve2D_2xjyt")

[node name="FollowWindowPath" type="PathFollow2D" parent="BabyController/WindowPath"]
position = Vector2(135, 240)
rotation = 3.11904
rotates = false
loop = false
script = ExtResource("9_uyle3")
state = "window"

[node name="OutletPath" type="Path2D" parent="BabyController"]
curve = SubResource("Curve2D_u1001")

[node name="FollowOutletPath" type="PathFollow2D" parent="BabyController/OutletPath"]
position = Vector2(135, 240)
rotation = 3.11904
rotates = false
loop = false
script = ExtResource("9_uyle3")
state = "outlet"

[node name="BabySprite" type="AnimatedSprite2D" parent="BabyController"]
unique_name_in_owner = true
position = Vector2(135, 240)
sprite_frames = SubResource("SpriteFrames_bw1xg")
animation = &"sit"

[node name="BabyActionTimer" type="Timer" parent="BabyController"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="HUD/SleepDelay" to="HUD" method="_on_sleep_delay_timeout"]
[connection signal="timeout" from="HUD/SleepDelay" to="BabyController" method="_on_sleep_delay_timeout"]
[connection signal="timeout" from="HUD/DeepSleepDelay" to="HUD" method="_on_deep_sleep_delay_timeout"]
[connection signal="button_down" from="HUD/MarginContainer/Rows/Bottom/Actions/SleepButton" to="HUD" method="_on_sleep_button_button_down"]
[connection signal="button_up" from="HUD/MarginContainer/Rows/Bottom/Actions/SleepButton" to="HUD" method="_on_sleep_button_button_up"]
[connection signal="pressed" from="HUD/MarginContainer/Rows/Bottom/Actions/ShhButton" to="HUD" method="_on_shh_button_pressed"]
[connection signal="pressed" from="HUD/MarginContainer/Rows/Bottom/Actions/ShhButton" to="BabyController" method="_on_shh_button_pressed"]
[connection signal="timeout" from="HUD/WindowDelay" to="HUD" method="_on_window_delay_timeout"]
[connection signal="button_down" from="HUD/Window" to="HUD" method="_on_window_button_down"]
[connection signal="button_up" from="HUD/Window" to="HUD" method="_on_window_button_up"]
[connection signal="timeout" from="BabyController/BabyActionTimer" to="HUD" method="_on_baby_action_timer_timeout"]
